# mdmdview

./: .gitignore  .mdbump  2025.10.30 - RLN 05 - Without Goodbye-UDIO.md  20260113-224751-src-COMBINED.TXT  AGENTS.md  CLAUDE.md  Cargo.toml  Extra features.md  FINAL_BUG_FIX_REPORT.md  LICENSE  README.md  RESEARCH_SUMMARY.md  TABLE_LAYOUT_QUICK_REFERENCE.md  analyze_text.rs  bug_fixes_summary.md  build.rs  ci-local.ps1  keyboard_fix_summary.md  navigation_tests_backup.rs  test_context_menu.md  test_stress.md  test_table.md  test_tofu.md  test_unix_lf.md  test_windows_crlf.md  tests.md
.claude/: settings.local.json
docs/: 2025.09.09 - CORRECT_NAVIGATION_IMPLEMENTATION.md  2025.09.09 - Extra features.md  2025.09.09 - F11_deadlock_fix.md  2025.09.09 - FINAL_BUG_FIX_REPORT.md  2025.09.09 - IMAGE_SUPPORT_PLAN.md  2025.09.09 - bug_fixes_summary.md  2025.09.09 - keyboard_fix_summary.md  2025.09.09 - navigation_direction_fix.md  2025.09.09 - navigation_fix_v2.md  2025.10.18 - REVIEW_NOTES_2025-10-18.md  2025.10.19 - CONTINUATION_PLAN.md  QA-table-wrap.md
examples/: complete_test.md  exact_issue_test.md  gen_webp.rs  inline_images.md  inline_test.md  list_test.md  project_structure_test.md  syntax_test.md  table_complex.md  table_stress.md  table_test.md  test_file.md  webp_test.md
plans/: 2025.01.06 - Add Navigation History.md  2025.01.06 - Fix Soft Break Rendering.md  2025.01.06 - Fix Unix Line Ending Handling.md
scripts/: full_test.ps1  prerelease.ps1  winget-submit.ps1
src/: app.rs  d2_renderer.rs  diagram_common.rs  emoji_assets.rs  emoji_catalog.rs  image_decode.rs  lib.rs  lru_cache.rs  main.rs  markdown_renderer.rs  mermaid_renderer.rs  pikchr_renderer.rs  sample_files.rs  shell_integration.rs  theme.rs  window_state.rs
tools/: mermaid_review_pack.py  mermaid_visual_check.py  tmp_005-tables.json  tmp_011-table-alignments.json  tmp_012-table-wrap-long.json  tmp_013-table-escaping.json  tmp_014-table-missing-cells.json  tmp_015-table-inline-elements.json  tmp_016-table-wide.json  tmp_017-table-line-breaks.json  tmp_018-table-missing-nowrap.json  tmp_019-table-multi-nowrap.json  tmp_020-table-line-breaks-nowrap.json  tmp_021-table-single-column.json  tmp_022-table-unicode-nowrap.json  tmp_023-table-dark-legacy.json  tmp_024-table-in-list.json  tmp_025-table-in-blockquote.json  tmp_026-table-first-column-align.json  tmp_case_005-tables.json  tmp_case_011-table-alignments.json  tmp_case_012-table-wrap-long.json  tmp_case_013-table-escaping.json  tmp_case_014-table-missing-cells.json  tmp_case_015-table-inline-elements.json  tmp_case_016-table-wide.json  tmp_case_017-table-line-breaks.json  tmp_case_018-table-missing-nowrap.json  tmp_case_019-table-multi-nowrap.json  tmp_case_020-table-line-breaks-nowrap.json  tmp_case_021-table-single-column.json  tmp_case_022-table-unicode-nowrap.json  tmp_case_023-table-dark-legacy.json  tmp_case_024-table-in-list.json  tmp_case_025-table-in-blockquote.json  tmp_case_026-table-first-column-align.json  tmp_table_alignments.json  tmp_table_alignments_full.json  tmp_table_blockquote.json  tmp_table_dark_legacy.json  (+17 more)
winget/: 0x4D44.mdmdview.installer.yaml  0x4D44.mdmdview.locale.en-US.yaml  0x4D44.mdmdview.yaml
wix/: License.rtf  main.wxs
wrk_docs/: 2025.09.09 - CORRECT_NAVIGATION_IMPLEMENTATION.md  2025.09.09 - IMAGE_SUPPORT_PLAN.md  2025.09.09 - navigation_direction_fix.md  2025.10.18 - REVIEW_NOTES_2025-10-18.md  2025.11.07 - HLD - Right Click Context Menu.md  2025.11.07 - Implementation Summary - Context Menu.md  2025.11.07 - Selection Issue and Workaround.md  2025.11.09 - HLD - Drag and Drop Support.md  2025.11.09 - PLN - Drag and Drop Implementation.md  2025.11.10 - HLD - Table Wrapping Overhaul.md  2025.11.10 - PLN - Table Wrapping Overhaul.md  2025.11.13 - HLD - Table Wrap Replatform.md  2025.11.13 - PLN - Table Wrap Replatform.md  2025.11.13 - Table Wrap Research.md  2025.11.14 - HLD - Table Column Fixes.md  2025.11.14 - HLD - Table Column and Border Fixes (Final).md  2025.11.14 - HLD - Table Column and Border Fixes (Rev 2).md  2025.11.14 - HLD - Table Column and Border Fixes (Rev 3).md  2025.11.14 - HLD - Table Column and Border Fixes.md  2025.11.14 - HLD - Table Dividers and Column Widths.md  2025.11.14 - PLN - Table Column Fixes.md  2025.11.14 - PLN - Table Dividers and Column Widths.md  2025.11.14 - RSR - Table Rendering Research.md  2025.11.17 - PLN - Table Divider Recovery.md  2025.11.19 - Table Divider Regression Plan.md  2025.11.20 - HLD - table-formatting-improvements.md  2025.11.20 - PLN - table-formatting-improvements.md  2025.11.20 - table-formatting-review.md  (+190 more)
(+767 files in other folders)
