[package]
name = "mdmdview"
version = "0.1.0"
edition = "2021"
description = "A simple markdown viewer for Windows"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "mdmdview"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
pulldown-cmark = "0.9"
syntect = "5.2"
webbrowser = "0.8"
rfd = "0.14"
anyhow = "1.0"
env_logger = "0.10"
image = "0.24"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
winres = "0.1"

# Optimize for smaller binary size
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
