[package]
name = "mdmdview"
version = "1.0.2"
edition = "2021"
description = "A simple markdown viewer for Windows"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "mdmdview"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
pulldown-cmark = "0.9"
syntect = "5.2"
webbrowser = "0.8"
rfd = "0.14"
anyhow = "1.0"
crossbeam-channel = "0.5"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }
unicode-segmentation = "1"
unicode-normalization = "0.1"
unicode-casefold = "0.2"
unicode-width = "0.1"
usvg = { version = "0.43", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
resvg = "0.43"
tiny-skia = "0.11"
htmlescape = "0.3"
ttf-parser = "0.25"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
winres = "0.1"

# Optimize for smaller binary size
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
# Default to the embedded Mermaid renderer (QuickJS).
default = ["mermaid-embedded"]
# Enable JavaScript-based Mermaid rendering via QuickJS (embedded)
mermaid-quickjs = ["dep:rquickjs"]
# Embedded Mermaid support (alias for mermaid-quickjs)
mermaid-embedded = ["mermaid-quickjs"]

[dependencies.rquickjs]
version = "0.6"
optional = true
