[workspace]
members = [".", "crates/d2"]

[workspace.package]
edition = "2021"

[package]
name = "mdmdview"
version = "1.12.0"
edition.workspace = true
description = "A markdown viewer for Windows"
authors = ["0x4D44 <martingdavidson@gmail.com>"]
license = "MIT"

[[bin]]
name = "mdmdview"
path = "src/main.rs"

[[bin]]
name = "full_test"
path = "src/bin/full_test.rs"

[dependencies]
# Disable accesskit (accessibility) to reduce idle CPU/GPU usage
# See: https://github.com/emilk/egui/issues/4527
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.27"
egui_extras = "0.27"
pulldown-cmark = "0.9"
syntect = "5.2"
webbrowser = "0.8"
rfd = "0.14"
anyhow = "1.0"
crossbeam-channel = "0.5"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }
unicode-segmentation = "1"
unicode-normalization = "0.1"
unicode-casefold = "0.2"
unicode-width = "0.1"
usvg = { version = "0.43", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
resvg = "0.43"
tiny-skia = "0.11"
htmlescape = "0.3"
ttf-parser = "0.25"
ureq = "2.9"
base64 = "0.22"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
clipboard-win = "5.4"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
winres = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

# Optimize for smaller binary size
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Profiling profile: optimized but with debug symbols
[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
# Default to the embedded Mermaid renderer (QuickJS).
default = ["mermaid-embedded", "pikchr", "d2"]
# Enable JavaScript-based Mermaid rendering via QuickJS (embedded)
mermaid-quickjs = ["dep:rquickjs"]
# Embedded Mermaid support (alias for mermaid-quickjs)
mermaid-embedded = ["mermaid-quickjs"]
# Pikchr diagram rendering (embedded C library, compiled from C source)
pikchr = ["dep:pikchr"]
# D2 diagram rendering (native Rust implementation)
d2 = ["dep:mdmdview-d2"]

[dependencies.rquickjs]
version = "0.11"
optional = true

[dependencies.pikchr]
version = "0.1"
optional = true

[dependencies.mdmdview-d2]
path = "crates/d2"
optional = true

[package.metadata.wix]
upgrade-guid = "2D62FD4A-A4F8-43CD-9D12-5930D4152D20"
product-icon = "icon.ico"
